--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.416.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^12.0.1",
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
